# MediaNest

./: index.html  package-lock.json  package.json
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: devtool.rs
src-tauri/src/: catalog.rs  crypto.rs  db.rs  dedup.rs  import.rs  indexer.rs  lib.rs  main.rs  ops.rs  protected.rs  video.rs
src/components/: AppShell.tsx  Blurhash.tsx  DateScrubber.tsx  EmptyState.tsx  FolderPicker.tsx  FolderTree.tsx  Grid.tsx  Lightbox.tsx  PasswordPrompt.tsx  Thumb.tsx
src/stores/: app.ts  library.ts
src/views/: AlbumsView.tsx  DuplicatesView.tsx  FoldersView.tsx  ImportView.tsx  Onboarding.tsx  SettingsView.tsx  TagsView.tsx  TimelineView.tsx  TrashView.tsx
