[package]
name = "medianest"
version = "0.1.0"
description = "MediaNest — katalog zdjęć i filmów"
authors = ["MediaNest"]
edition = "2021"

[lib]
name = "medianest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
blake3 = { version = "1", features = ["mmap", "rayon"] }
walkdir = "2"
rayon = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "tiff", "webp"] }
webp = "0.3"
blurhash = "0.2"
kamadak-exif = "0.6"
chrono = "0.4"
notify-debouncer-full = "0.4"
ffmpeg-sidecar = "2"
trash = "5"
image_hasher = "3"
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = "1"
getrandom = "0.2"

[profile.release]
lto = true
codegen-units = 1
